[package]
name = "rust_os"
version = "0.1.0"
authors = ["tko-cactus <37374201+tko-cactus@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort" # パニックを中止する

[profile.release]
panic = "abort" # パニックを中止する
